--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --dir src",
-    "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'"
+    "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json,css}'",
+    "test": "jest --env=jsdom --verbose"
   },
   "dependencies": {
     "next": "12.1.0",
@@ -15,15 +16,25 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.11.3",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "autoprefixer": "^10.4.2",
+    "babel-jest": "^27.5.1",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
     "eslint-config-prettier": "^8.5.0",
+    "jest": "^27.5.1",
+    "jest-dom": "^4.0.0",
+    "node-mocks-http": "^1.11.0",
     "postcss": "^8.4.8",
     "prettier": "^2.5.1",
     "tailwindcss": "^3.0.23",
+    "ts-jest": "^27.1.3",
+    "ts-loader": "^9.2.8",
     "typescript": "4.6.2"
   }
 }
