--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sunrise-sunset-js": "^2.2.1"
+    "suncalc": "^1.9.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.11.3",
@@ -28,6 +28,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "@types/suncalc": "^1.8.1",
     "babel-jest": "^27.5.1",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
