--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@testing-library/dom": "^8.11.3",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
+    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
@@ -37,6 +38,7 @@
     "jest-dom": "^4.0.0",
     "node-mocks-http": "^1.11.0",
     "prettier": "^2.5.1",
+    "react-test-renderer": "^17.0.2",
     "ts-jest": "^27.1.3",
     "ts-loader": "^9.2.8",
     "typescript": "4.6.2"
