google-map-react インストール

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.8.1",
     "date-fns": "^2.28.0",
     "framer-motion": "^6.2.8",
+    "google-map-react": "^2.1.10",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -27,6 +28,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/google-map-react": "^2.1.5",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "@types/suncalc": "^1.8.1",
