--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^1.8.6",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@react-google-maps/api": "^2.8.1",
     "date-fns": "^2.28.0",
     "framer-motion": "^6.2.8",
     "google-map-react": "^2.1.10",
