--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@react-google-maps/api": "^2.8.1",
+    "@types/mapbox-gl": "^2.7.0",
     "date-fns": "^2.28.0",
     "framer-motion": "^6.2.8",
     "google-map-react": "^2.1.10",
+    "mapbox-gl": "^2.8.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
