--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@chakra-ui/react": "^1.8.6",
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
+    "@mapbox/mapbox-gl-language": "^1.0.0",
     "@react-google-maps/api": "^2.8.1",
     "@types/mapbox-gl": "^2.7.0",
     "date-fns": "^2.28.0",
