--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "date-fns": "^2.28.0",
     "framer-motion": "^6.2.8",
     "google-map-react": "^2.1.10",
+    "leaflet": "^1.7.1",
     "mapbox-gl": "^2.8.1",
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-leaflet": "^3.2.5",
     "react-map-gl": "^7.0.10",
     "suncalc": "^1.9.0"
   },
@@ -34,8 +36,10 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/google-map-react": "^2.1.5",
+    "@types/leaflet": "^1.7.9",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
+    "@types/react-leaflet": "^2.8.2",
     "@types/suncalc": "^1.8.1",
     "babel-jest": "^27.5.1",
     "eslint": "8.10.0",
