--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.8.1",
     "@mapbox/mapbox-gl-language": "^1.0.0",
     "@types/mapbox-gl": "^2.7.0",
+    "@types/recoil": "^0.0.9",
     "date-fns": "^2.28.0",
     "framer-motion": "^6.2.8",
     "mapbox-gl": "^2.8.1",
@@ -24,6 +25,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-map-gl": "^7.0.11",
+    "recoil": "^0.7.2",
     "suncalc": "^1.9.0"
   },
   "devDependencies": {
