--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
     "react-map-gl": "^7.0.11",
     "recoil": "^0.7.2",
     "suncalc": "^1.9.0"
