--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^6.2.8",
     "mapbox-gl": "^2.8.1",
     "next": "12.1.0",
+    "next-head-seo": "^0.1.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
