--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
+    "@types/gtag.js": "^0.0.10",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "@types/suncalc": "^1.8.1",
