--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mapbox/mapbox-gl-language": "^1.0.0",
+    "@types/axios": "^0.14.0",
     "@types/mapbox-gl": "^2.7.0",
     "@types/recoil": "^0.0.9",
+    "axios": "^0.27.2",
+    "axios-jsonp": "^1.0.4",
     "date-fns": "^2.28.0",
     "framer-motion": "^6.2.8",
     "mapbox-gl": "^2.8.1",
