--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-map-gl": "^7.0.11",
+    "react-query": "^3.39.0",
     "recoil": "^0.7.2",
     "suncalc": "^1.9.0"
   },
