--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mapbox/mapbox-gl-language": "^1.0.0",
     "@types/mapbox-gl": "^2.7.0",
     "@types/recoil": "^0.0.9",
+    "@types/uuid": "^8.3.4",
     "date-fns": "^2.28.0",
     "framer-motion": "^6.2.8",
     "mapbox-gl": "^2.8.1",
@@ -28,7 +29,8 @@
     "react-map-gl": "^7.0.11",
     "react-query": "^3.39.0",
     "recoil": "^0.7.2",
-    "suncalc": "^1.9.0"
+    "suncalc": "^1.9.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@testing-library/dom": "^8.11.3",
